--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+/*==================================================
+全体
+===================================*/
+
+.cast-img {
+  width: 600px;
+  height: 600px;
+  object-fit:cover;
+}
+
+/*==================================================
+トップイメージ
+===================================*/
+
 .scroll-area {
     width: 100%;
     height: 100vh;
@@ -28,8 +42,8 @@
 
   /* time-schedule */
 .time-schedule {
-  min-width: 400px;
-  max-width: 400px;
+  min-width: 600px;
+  max-width: 600px;
   list-style: none;
   margin: 0 auto 0 6em;
   padding-left: 20px;
@@ -46,6 +60,7 @@
 
 .time-schedule span.time {
   width: 5em;
+  font-size: 24px;
   display: inline-block;
   margin-left: -8em;
   padding: 0 0 5px;
@@ -71,7 +86,7 @@
   display: inline-block;
   width: 100%;
   margin-left: 30px;
-  padding: 15px 10px 15px 10px;
+  padding: 15px 10px 15px 30px;
   vertical-align: middle;
   background: #efefef;
   box-sizing: border-box;
@@ -79,11 +94,43 @@
 }
 
 .time-schedule .sch_title {
-  font-size: 16px;
+  font-size: 32px;
   font-weight: 700;
 }
 
 .time-schedule .sch_tx {
-  font-size: 14px;
+  font-size: 24px;
   font-weight: normal;
 }
+
+/*==================================================
+ふわっ
+===================================*/
+
+.initial-fadein{
+  transform:translateX(-50px);
+  opacity:0;
+  transition:opacity 1s,transform 0.5s;
+}
+
+.fadein{
+  opacity:1;
+  transform:translateX(0);
+}
+
+  /*==================================================
+背景ななめに
+===================================*/
+
+  .slant-bg::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #D1E28A;
+    transform: skewY(-7deg);
+    z-index: -1;
+}
+  
